# voice-input-src

./: CHANGELOG.md  CLAUDE.md  README.md
.github/workflows/: release.yml
docs/superpowers/plans/: 2026-05-19-linux-standalone-restructure.md
implementation/: 2026-05-15-phase-0-scaffold.md  2026-05-16-phase-2-hotkey-paste.md  2026-05-16-phase-3-overlay.md  2026-05-16-phase-4-llm-refiner.md  2026-05-17-phase-5-settings-tray-menus.md
linux/: .gitignore  Cargo.toml  README.md
linux/scripts/: install-ydotool.sh
linux/src/: audio.rs  cli.rs  config.rs  error.rs  hotkey.rs  injector.rs  lib.rs  main.rs  refiner.rs  settings_window.rs  state.rs  tray.rs
linux/src/overlay/: mod.rs  waveform.rs  window.rs
linux/src/speech/: mod.rs  vad.rs  worker.rs
linux/tests/: audio_rms.rs  config_roundtrip.rs  refiner_http.rs  resolve_model_path.rs  vad_slicing.rs
plans/: voice-input-linux.md
plans/2026-05-18-deb-release/: deb-release.md
plans/2026-05-19-linux-standalone-restructure/: design.md
