[package]
name = "voice-input"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Desmond Chen"]
license = "MIT"
description = "Wayland-native voice input — hold-to-talk speech-to-text"

[dependencies]
anyhow = "1"
directories = "5"
ksni = { version = "0.3", features = ["tokio"] }
serde = { version = "1", features = ["derive"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "voice-input"
path = "src/main.rs"

[lib]
name = "voice_input"
path = "src/lib.rs"
