[package]
name = "voice-input"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"
authors = ["Desmond Chen"]
license = "MIT"
description = "Wayland-native voice input — hold-to-talk speech-to-text"

[dependencies]
anyhow = "1"
ashpd = { version = "0.13", features = ["global_shortcuts"] }
clap = { version = "4", features = ["derive"] }
cpal = "0.15"
crossbeam-channel = "0.5"
ctrlc = "3"
directories = "5"
futures-util = "0.3"
gtk4 = { version = "0.10", features = ["v4_12"] }
gtk4-layer-shell = "0.6"
ksni = { version = "0.3", features = ["tokio"] }
parking_lot = "0.12"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
rubato = "0.16"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "signal"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
voice_activity_detector = "0.2"
whisper-rs = "0.14"
wl-clipboard-rs = "0.9"

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[[bin]]
name = "voice-input"
path = "src/main.rs"

[lib]
name = "voice_input"
path = "src/lib.rs"
